refactor: replace Collections with immutable collections factory methods