@@ -85,7 +85,7 @@ public class LuckPermsModule implements ModuleSimple {
     }
 
     public Set<String> getGroups() {
-        if (!moduleController.isEnable(this)) return Collections.emptySet();
+        if (!moduleController.isEnable(this)) return Set.of();
 
         return luckPermsIntegration.getGroups();
     }
