@@ -51,7 +51,7 @@ public class ColorParser implements ArgumentParser<FPlayer, String>, BlockingSug
         boolean hasOtherPermission = permissionChecker.check(context.sender(), fileFacade.permission().command().chatcolor().other());
         if (!hasOtherPermission && args.length >= maxColors ||
                 hasOtherPermission && args.length >= maxColors + 1) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         List<String> suggestions = new ObjectArrayList<>();
